added auth for custom users
